@@ -1,6 +1,8 @@
 Version ClaSS-1.0.22 release (2012/06/10)
 -------------------------------------------
 
+A list of a student's class teachers added to each subject report.
+
 
 
 Version ClaSS-1.0.21 release (2012/05/21)
